--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@
     display: block;
     height: 300px;
 }
-.img-cur-pointer:hover {
+.product-lighting:hover {
+    background: #F8F8F8;
     cursor: pointer;
 }
